# iced-glaze

./: Cargo.toml  LICENSE  README.md  build  check_coverage
.github/workflows/: ci.yml
behaviours/: Cargo.toml
behaviours/src/: button.rs  lib.rs  visuals.rs
behaviours/src/events/: event.rs  event_with_arg.rs  mod.rs  two_state_event.rs
ci-test/: Cargo.toml
docs/: menu-bar-design-v2.pptx  ui-elements.pptx
fancybutton/: Cargo.toml
fancybutton/src/: button.rs  lib.rs  visual.rs
glaze/: Cargo.toml
glaze/src/: button.rs  lib.rs  standard.rs  visual.rs
glaze/src/button/: lozenge.rs  mod.rs  standard.rs  visual.rs
glaze/src/lozenge/: button.rs  mod.rs
glaze/src/standard/: button.rs  mod.rs
glazed/: Cargo.toml
glazed/src/: main.rs
iced_plus/: Cargo.toml
iced_plus/src/: events.rs  lib.rs  padding.rs
