
[workspace]
resolver = "2"
members=["behaviours","glaze","glazed", "iced_plus"]
default-members=["glazed"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[workspace.dependencies]
glaze = { path = "./glaze" }
behaviours = { path = "./behaviours" }
iced_plus = { path = "./iced_plus" }
iced = { version = "0.14", features = ["advanced"]}
